// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element-snapshot-formatter format html for snapshot normalizing ms-Panel-headerText header-text--0nPhV headerText-198 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ms-Panel-headerText header-text--{{CSS_MODULE_HASH}} headerText-198"
    >
      Hello world!
    </div>
  </div>
</DocumentFragment>
`;

exports[`element-snapshot-formatter format html for snapshot normalizing test-class-one test-class-two 1`] = `
<DocumentFragment>
  <div>
    <div
      class="test-class-one test-class-two"
    >
      Hello world!
    </div>
  </div>
</DocumentFragment>
`;
